fix edge transition file reload bug